--- a/ClientDashboard_GUI/src/app/client-payments/client-payments.component.css
+++ b/ClientDashboard_GUI/src/app/client-payments/client-payments.component.css
@@ -25,6 +25,12 @@
     margin-top: -30px;
 }
 
+.filter-payment-button {
+    margin-left: 40px;
+    margin-bottom: -30px;
+    margin-top: -30px;
+}
+
 .delete-message {
   margin-bottom: 20px;
 }
