Naming convention change from regular navbar to user-navbar for selective component

--- a/ClientDashboard_GUI/src/app/home/home.html
+++ b/ClientDashboard_GUI/src/app/home/home.html
@@ -1,4 +1,4 @@
-<h1 class="header">Welcome to Client Dashboard</h1>
+<h1 class="header">Welcome to the FitCast Platform</h1>
 
 <p-button class="toggle-button" label="To Login" severity="success" routerLink="/login"/> 
 
