Refactor from two buttons within home page, to home-navbar allowing for navigation between home, login and register pages

--- a/ClientDashboard_GUI/src/app/home/home.html
+++ b/ClientDashboard_GUI/src/app/home/home.html
@@ -1,6 +1,3 @@
+<app-home-navbar></app-home-navbar>
 <h1 class="header">Welcome to the FitCast Platform</h1>
-
-<p-button class="toggle-button" label="To Login" severity="success" routerLink="/login"/> 
-
-<p-button class="toggle-button" label="To Register" severity="success" routerLink="/register"/> 
 
