Provide input mask field for phone number declaration, ensuring easily phone number correction upon input

--- a/ClientDashboard_GUI/src/app/register/register.component.html
+++ b/ClientDashboard_GUI/src/app/register/register.component.html
@@ -21,7 +21,11 @@
       </div>
         <div class="register-field">
         <p-iftalabel>
-          <input pInputText id="phoneNumber" [(ngModel)]="phoneNumber" />
+          <p-inputmask
+          mask="+44 9999 999999"
+          [(ngModel)]="phoneNumber"
+          placeholder="+44 7700 900000"
+            />
           <label>Phone Number</label>
         </p-iftalabel>
       </div>
