--- a/ClientDashboard_GUI/src/app/register/register.component.html
+++ b/ClientDashboard_GUI/src/app/register/register.component.html
@@ -26,7 +26,7 @@
           [(ngModel)]="phoneNumber"
           placeholder="+44 7700 900000"
             />
-          <label>Phone Number</label>
+          <label>UK Phone Number</label>
         </p-iftalabel>
       </div>
       <div class="register-field">
