--- a/ClientDashboard_GUI/src/app/register/register.component.css
+++ b/ClientDashboard_GUI/src/app/register/register.component.css
@@ -7,6 +7,7 @@
 
 .register-field {
   margin-bottom: 0.5rem;
+  margin-right: 0.5rem;
   width: 100%;
 }
 
@@ -23,6 +24,12 @@
 .register-field p-password {
   width: 100% ;
   min-height: 3rem;
+}
+
+.client-verification {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
