Adapt onLabel and offLabel p-togglebutton properties to more modernised syntax

--- a/ClientDashboard_GUI/src/app/register/register.component.html
+++ b/ClientDashboard_GUI/src/app/register/register.component.html
@@ -61,7 +61,7 @@
             </p-iftalabel>
       </div>
         <div class="card flex justify-center">
-          <p-togglebutton disabled="true" onIcon="pi pi-check" offIcon="pi pi-times" [(ngModel)]="trainerNumberVerified" onLabel="" offLabel="" styleClass="w-full sm:w-40" ariaLabel="Confirmation" />
+          <p-togglebutton disabled="true" [onIcon]="'pi pi-check'" [offIcon]="'pi pi-times'" [(ngModel)]="trainerNumberVerified" onLabel="" offLabel="" styleClass="w-full sm:w-40" ariaLabel="Confirmation" />
         </div>
         <p-button class="client-verify-button" label="Verify" severity="info" (click)="verifyClientUnderTrainer(trainerVerificationPhoneNumber, firstName)"/>
         }
