--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -117,8 +117,8 @@
                     <p-togglebutton
                         [disabled]="!validApiKeyProvided"
                         (click)="gatherExternalWorkouts()"
-                        onLabel="Gather Workouts"
-                        offLabel="Gather Workouts"
+                        [onLabel]="'Gather Workouts'"
+                        [offLabel]="'Gather Workouts'"
                         styleClass="w-full sm:w-40"
                         ariaLabel="Gather Workouts"
                         size="small">
