Correct both clientId and clientsTrainerId to be nullable types, as well as configuring frontend to input updated registerDto

--- a/ClientDashboard_GUI/src/app/register/register.component.html
+++ b/ClientDashboard_GUI/src/app/register/register.component.html
@@ -76,7 +76,8 @@
       </div>
     </div>
       <div class="button-container">
-          <p-button class="register-button" label="Register" severity="success" (click)="trainerRegister(email, firstName, surname, password)"/>
+          <p-button class="register-button" label="Register" severity="success" 
+          (click)="trainerRegister(email, firstName, surname, phoneNumber, userType, verifiedClientId, verifiedTrainerId, password)"/>
           <p-button class="to-login-button" label="To Login" severity="secondary" routerLink="/login"/>
       </div>
 </div>
