--- a/ClientDashboard_GUI/src/app/login/login.component.css
+++ b/ClientDashboard_GUI/src/app/login/login.component.css
@@ -53,3 +53,66 @@
     width: 100%;
   }
 }
+
+.radio-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.75rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.radio-button {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.radio-buttons{
+  display: flex;
+}
+
+.user-type-label {
+  color: #6c757d;
+  font-size: 0.875rem;
+  font-weight: 500;
+  text-align: center;
+}
+
+.radio-label {
+  color: #495057;
+  font-size: 0.95rem;
+  font-weight: 400;
+  cursor: pointer;
+  user-select: none;
+}
+
+
+.register-button,
+.to-login-button {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+  margin-right: 5px;
+  min-height: 3rem;
+  min-width: 2rem;
+}
+
+/* smaller screens */
+@media (max-width: 768px) {
+  .register-form-container {
+    max-width: 300px;
+    padding: 1rem;
+  }
+  
+  .button-container {
+    flex-direction: column;
+  }
+  
+  .register-button,
+  .to-login-button {
+    width: 100%;
+  }
+}
