Ensure login/register method are named exclusively between either user types

--- a/ClientDashboard_GUI/src/app/login/login.component.html
+++ b/ClientDashboard_GUI/src/app/login/login.component.html
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="button-container">
-            <p-button class="login-button" label="Login" severity="success" (click)="login(email, password, userType)"/>
+            <p-button class="login-button" label="Login" severity="success" (click)="userLogin(email, password, userType)"/>
             <p-button class="to-register-button" label="To Register" severity="secondary" routerLink="/register"/>
           </div>
 </div>
