--- a/ClientDashboard_GUI/src/app/register/register.component.html
+++ b/ClientDashboard_GUI/src/app/register/register.component.html
@@ -77,7 +77,7 @@
     </div>
       <div class="button-container">
           <p-button class="register-button" label="Register" severity="success" 
-          (click)="register(email, firstName, surname, phoneNumber, userType, verifiedClientId, verifiedTrainerId, password)"/>
+          (click)="userRegister(email, firstName, surname, phoneNumber, userType, verifiedClientId, verifiedTrainerId, password)"/>
           <p-button class="to-login-button" label="To Login" severity="secondary" routerLink="/login"/>
       </div>
 </div>
