--- a/ClientDashboard_GUI/src/app/login/login.component.css
+++ b/ClientDashboard_GUI/src/app/login/login.component.css
@@ -89,7 +89,9 @@
 
 
 .register-button,
-.to-login-button {
+.to-login-button,
+.email-verification-button
+ {
   flex: 1;
   display: flex;
   justify-content: center;
@@ -98,6 +100,10 @@
   margin-right: 5px;
   min-height: 3rem;
   min-width: 2rem;
+}
+
+.email-verification-button {
+  margin-top: 1rem;
 }
 
 /* smaller screens */
