--- a/ClientDashboard_GUI/src/app/register/register.component.html
+++ b/ClientDashboard_GUI/src/app/register/register.component.html
@@ -1,3 +1,13 @@
+<p-dialog header="Further Verification" [modal]="true" [(visible)]="verifyEmailDialogVisible" [style]="{ width: '25rem' }">
+    <div class="delete-message">
+      <span class="p-text-secondary block mb-8">Now that your account is created ensure you verify your email before logging in</span>
+      <img src="/assets/images/plain-email-verification-image.png">
+    </div>
+      <div class="flex justify-end gap-2">
+          <p-button label="Cancel" severity="secondary" (click)="verifyEmailDialogVisible = false" />
+      </div>
+</p-dialog>
+
 <div class="register-form-container">
   <h1 class="header">Register Below</h1>
     <div class="register-field">
