--- a/ClientDashboard_GUI/src/app/login/login.component.html
+++ b/ClientDashboard_GUI/src/app/login/login.component.html
@@ -28,6 +28,8 @@
         <div class="button-container">
             <p-button class="login-button" label="Login" severity="success" (click)="userLogin(email, password, userType)"/>
             <p-button class="to-register-button" label="To Register" severity="secondary" routerLink="/register"/>
+
+             <p-button class="password-reset-button" label="Reset Password" severity="secondary" (click)="sendEmail(email)"/>
             <p-button class="email-verification-button" label="Resend Email Verification" severity="secondary" (click)="sendEmail(email)"/>
           </div>
 </div>
