Provide appropriate input fields and button within password reset page, along with setting up routing back to home page

--- a/ClientDashboard_GUI/src/app/password-reset/password-reset.component.html
+++ b/ClientDashboard_GUI/src/app/password-reset/password-reset.component.html
@@ -1,1 +1,19 @@
-<p>password-reset works!</p>
+<div class="password-reset-form-container">
+  <h1 class="header">Reset Password</h1>
+  <div class="password-field">
+    <p-iftalabel>
+      <p-password [(ngModel)]="newPassword" [feedback]="true" toggleMask="true"/>
+      <label>New Password</label>
+    </p-iftalabel>
+  </div>
+  <div class="password-field">
+    <p-iftalabel>
+      <p-password [(ngModel)]="confirmPassword" [feedback]="false" toggleMask="true"/>
+      <label>Confirm New Password</label>
+    </p-iftalabel>
+  </div>
+  <div class="button-container">
+     <p-button class="home-button" label="Return home" severity="secondary" routerLink=""/>
+      <p-button class="submit-button" label="Submit" severity="success" (click)="resetPassword()"/>
+  </div>
+</div>
