Begin creation of exclusion mechanism for automated client tracking, by creating initial button within client-workout component

--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -125,6 +125,8 @@
                     </p-togglebutton>
                 </div>
             </div>
+
+            <div class="right-segment">
                 
                 <div class="workout-search">
                     <p-iconfield iconPosition="left" class="ml-auto">
@@ -134,6 +136,9 @@
                         <input class="workout-search-input" pInputText type="text" (input)="dt2.filterGlobal($any($event.target).value, 'contains')" placeholder="Search client name" />
                     </p-iconfield>
                 </div>
+
+                <p-button icon="pi pi-times-circle" (click)="showDialogForAdd()" severity="secondary" label="Exclude" />
+            </div>
             
         </div>
     </ng-template>
