--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
@@ -30,6 +30,10 @@
     justify-content: space-between;
 }
 
+.right-segment {
+    display: flex;
+}
+
 .exercise-count-input {
     max-width: 80px;
 }
