--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.css
@@ -52,6 +52,11 @@
     gap: 0.5rem;
 }
 
+.name-exclusion-buttons {
+    display: flex;
+    justify-content: end;
+}
+
 .info-button-container {
     display: inline-block;
     margin-bottom: 1rem;
