--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -98,8 +98,14 @@
                         </div>
                     </p-popover>
                     <div class="flex items-center gap-4 mb-8">
-                        <label for="client-name" class="font-semibold w-24">Client Name</label>
-                        <p-autocomplete [appendTo]="'body'" [(ngModel)]="selectedExcludedName" [dropdown]="true" [suggestions]="excludedNames" optionLabel="name" (onDropdownClick)="gatherExcludedNames()" />
+                        <label for="excluded-name" class="font-semibold w-24">Excluded Name</label>
+                        <p-autocomplete 
+                            [appendTo]="'body'"
+                            [(ngModel)]="selectedExcludedName"
+                            [dropdown]="true"
+                            [suggestions]="excludedNames"
+                            optionLabel="name"
+                            (onDropdownClick)="gatherExcludedNames()" />
                     </div>
                     <div class="name-exclusion-buttons">
                               <p-button label="Delete" severity="danger" (click)="deleteExcludedName(selectedExcludedName)"/>
