--- a/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
+++ b/ClientDashboard_GUI/src/app/client-workouts/client-workouts.component.html
@@ -97,23 +97,23 @@
                             <p class="popover-text">{{exclusionInfoText}}</p>
                         </div>
                     </p-popover>
-                    <div class="flex items-center gap-4 mb-8">
-                        <label for="excluded-name" class="font-semibold w-24">Excluded Name</label>
-                        <p-autocomplete 
-                            [appendTo]="'body'"
-                            [(ngModel)]="selectedExcludedName"
-                            [dropdown]="true"
-                            [suggestions]="excludedNames"
-                            optionLabel="name"
-                            (onDropdownClick)="gatherExcludedNames()" />
-                    </div>
-                    <div class="name-exclusion-buttons">
-                              <p-button label="Delete" severity="danger" (click)="deleteExcludedName(selectedExcludedName)"/>
-                              <p-button label="Add" (click)="addNewExcludedName(selectedExcludedName)" />
-                              
-                    </div>
                 </div>
-
+                
+                <div class="flex items-center gap-4 mb-8">
+                    <label for="excluded-name" class="font-semibold w-24">Excluded Name</label>
+                    <p-autocomplete 
+                        [appendTo]="'body'"
+                        [(ngModel)]="selectedExcludedName"
+                        [dropdown]="true"
+                        [suggestions]="excludedNames"
+                        optionLabel="name"
+                        (onDropdownClick)="gatherExcludedNames()" />
+                </div>
+                
+                <div class="flex justify-end gap-2">
+                    <p-button label="Delete" severity="danger" (click)="deleteExcludedName(selectedExcludedName)" [disabled]="!selectedExcludedName" />
+                    <p-button label="Add" (click)="addNewExcludedName(selectedExcludedName)" [disabled]="!selectedExcludedName" />
+                </div>
             </p-dialog>
 
     <div class="table-container">
