Set up initial notification button that displays drawer within right side of the web page

--- a/ClientDashboard_GUI/src/app/user-navbar/user-navbar.html
+++ b/ClientDashboard_GUI/src/app/user-navbar/user-navbar.html
@@ -6,6 +6,14 @@
             <p-menubar [model]="generalItems" [style]="{'border': 'none', 'background': 'transparent'}"></p-menubar>
         </div>
     </ng-template>
+
+    <p-drawer header="Latest Notifications" [(visible)]="notificationVisibility" position="right">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+        </p>
+    </p-drawer>
 </p-menubar>
 }
 
