--- a/ClientDashboard_GUI/src/app/client-info/client-info.component.html
+++ b/ClientDashboard_GUI/src/app/client-info/client-info.component.html
@@ -53,8 +53,8 @@
   <div class="table-container">
   <p-table [value]="clients" dataKey="id" editMode="row" [tableStyle]="{ 'min-width': '50rem' }">
       <ng-template #header>
-        <div class="card flex justify-center">
-          <p-button icon="pi pi-plus" label="New" severity="secondary" (onClick)="showDialogForAdd()"></p-button>
+        <div class="flex justify-end gap-2">
+          <p-button icon="pi pi-plus" styleClass="add-button" label="New" severity="secondary" (onClick)="showDialogForAdd()"></p-button>
         </div>
           <tr>
               <th pSortableColumn="firstName" style="width:25%; text-align: center;">
