--- a/ClientDashboard_GUI/src/app/notification-toggle/notification-toggle.component.html
+++ b/ClientDashboard_GUI/src/app/notification-toggle/notification-toggle.component.html
@@ -1,3 +1,3 @@
 <div class="card flex justify-center">
-    <p-toggleswitch [(ngModel)]="notificationsToggled"/>
+    <p-toggleswitch ariaLabel="SMS Notifications" [(ngModel)]="notificationsToggled"/>
 </div>
