Configure toggle switch within drawer component

--- a/ClientDashboard_GUI/src/app/notification-toggle/notification-toggle.component.html
+++ b/ClientDashboard_GUI/src/app/notification-toggle/notification-toggle.component.html
@@ -1,3 +1,4 @@
-<div class="card flex justify-center">
-    <p-toggleswitch ariaLabel="SMS Notifications" [(ngModel)]="notificationsToggled"/>
+<div class="sms-notification-toggle">
+    <label for="switch1">SMS Notifications</label>
+    <p-toggleswitch inputId="switch1" [(ngModel)]="notificationsToggled"/>
 </div>
