Provide status gathering method within notification service and utilise within the toggle component upon load

--- a/ClientDashboard_GUI/src/app/notification-toggle/notification-toggle.component.html
+++ b/ClientDashboard_GUI/src/app/notification-toggle/notification-toggle.component.html
@@ -1,4 +1,4 @@
 <div class="sms-notification-toggle">
     <label for="notification-switch">SMS Notifications</label>
-    <p-toggleswitch inputId="notification-switch" [(ngModel)]="notificationsToggled" (onChange)="onNotificationToggle($event)" />
+    <p-toggleswitch inputId="notification-switch" [(ngModel)]="smsNotificationsToggled" (onChange)="onNotificationToggle($event)" />
 </div>
